# spendtrack

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup_hooks.sh
.github/workflows/: ci.yml
.hooks/: commit-msg  post-checkout  pre-commit
app/application/domain/entities/: health.py
app/application/ports/: health_port.py
app/application/services/: health_service.py
app/infrastructure/adapters/: health_adapter.py
app/infrastructure/config/: settings.py
app/infrastructure/http/: main.py
app/infrastructure/http/routers/: health_router.py
features/: environment.py  health.feature
features/steps/: health_steps.py
features/users/: admin_login_credentials.feature  admin_registration.feature  user_federated_identity_login.feature  user_login_biometric.feature  user_login_credentials.feature  user_other_profile_viewing.feature  user_own_profile_viewing.feature  user_password_recovery.feature  user_pin_verification.feature  user_profile_editing.feature  user_registration.feature
tests/application/domain/entities/: health_test.py
tests/application/services/: health_service_test.py
tests/infrastructure/adapter/: health_adapter_test.py
