[tool.poetry]
name = "spendtrack-backend"
version = "0.1.0"
description = "A REST API built with FastAPI following hexagonal architecture"
authors = ["Emiliano Prediger <ej.prediger@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
behave = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.12.7"
coverage = "^7.10.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
ignore = []
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
per-file-ignores = {"__init__.py"= ["F401"]}

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/features/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
